[gd_scene load_steps=20 format=3 uid="uid://cngcrhtmvjcaj"]

[ext_resource type="Script" uid="uid://dxp1op42s5vmr" path="res://scripts/audio_manager.gd" id="1_8qd8g"]
[ext_resource type="AudioStream" uid="uid://ckpe5eefdeedi" path="res://assets/audio/Music.ogg" id="2_2y5yn"]
[ext_resource type="AudioStream" uid="uid://c4oi8svroypwu" path="res://assets/audio/Barullo_Loop.ogg" id="2_liach"]
[ext_resource type="AudioStream" uid="uid://4jah76vf243h" path="res://assets/audio/breathCalm-001.wav" id="3_2y2jw"]
[ext_resource type="AudioStream" uid="uid://clvl6lf47ylr3" path="res://assets/audio/breathCalm-002.wav" id="4_2y5yn"]
[ext_resource type="AudioStream" uid="uid://b78nu8jucii06" path="res://assets/audio/breathCalm-003.wav" id="5_oucy0"]
[ext_resource type="AudioStream" uid="uid://cqk0p2071478u" path="res://assets/audio/breathFast_Loop.ogg" id="6_cuol6"]
[ext_resource type="AudioStream" uid="uid://c0new2dy8trxl" path="res://assets/audio/poof-001.wav" id="7_m1k83"]
[ext_resource type="AudioStream" uid="uid://hp8w44dwtnxk" path="res://assets/audio/poof-002.wav" id="8_oummu"]
[ext_resource type="AudioStream" uid="uid://cv1a3gckneggu" path="res://assets/audio/poof-003.wav" id="9_hssp1"]
[ext_resource type="AudioStream" uid="uid://qift3hnj88g2" path="res://assets/audio/poof-004.wav" id="10_8b11i"]
[ext_resource type="AudioStream" uid="uid://8u85bdvy2ie" path="res://assets/audio/InteractionsAndClicks-002.ogg" id="11_u6qdm"]
[ext_resource type="AudioStream" uid="uid://ckdc2efi88hae" path="res://assets/audio/InteractionsAndClicks-003.ogg" id="12_f6jxr"]
[ext_resource type="AudioStream" uid="uid://brja6kslwvtn5" path="res://assets/audio/InteractionsAndClicks-004.ogg" id="13_ovaav"]
[ext_resource type="AudioStream" uid="uid://cx8dwf2qcjrku" path="res://assets/audio/InteractionsAndClicks-001.ogg" id="14_thanh"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_nplbh"]
shuffle = true
stream_count = 3
stream_0 = ExtResource("3_2y2jw")
stream_1 = ExtResource("4_2y5yn")
stream_2 = ExtResource("5_oucy0")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_24ib7"]
random_pitch = 1.26
random_volume_offset_db = 1.05
streams_count = 4
stream_0/stream = ExtResource("7_m1k83")
stream_1/stream = ExtResource("8_oummu")
stream_2/stream = ExtResource("9_hssp1")
stream_3/stream = ExtResource("10_8b11i")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kr8a2"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 3
stream_0/stream = ExtResource("11_u6qdm")
stream_1/stream = ExtResource("12_f6jxr")
stream_2/stream = ExtResource("13_ovaav")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2agnf"]
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("14_thanh")

[node name="AudioManager" type="Node" node_paths=PackedStringArray("music_loop", "barullo_loop", "respiracion_calmada", "respiracion_rapida", "poof_sfx")]
script = ExtResource("1_8qd8g")
music_loop = NodePath("MX/MusicLoop")
barullo_loop = NodePath("SFX/BarulloLoop")
respiracion_calmada = NodePath("SFX/RespiracionCalmada")
respiracion_rapida = NodePath("SFX/RespiraacionRapida")
poof_sfx = NodePath("SFX/PoofSFX")

[node name="MX" type="Node" parent="."]

[node name="MusicLoop" type="AudioStreamPlayer" parent="MX"]
stream = ExtResource("2_2y5yn")
volume_db = -12.372
autoplay = true

[node name="SFX" type="Node" parent="."]

[node name="BarulloLoop" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("2_liach")
volume_db = -7.406
playback_type = 1

[node name="RespiracionCalmada" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamPlaylist_nplbh")
volume_db = -26.69

[node name="RespiraacionRapida" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_cuol6")
volume_db = -18.409

[node name="PoofSFX" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_24ib7")
volume_db = -9.228
pitch_scale = 1.35

[node name="InteractionsA" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_kr8a2")
volume_db = -8.081

[node name="InteractionsB" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_2agnf")
volume_db = -9.204
